# codex-experiments

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
agent/: agent.py  index.ts
mcp/: README.md
mcp/postgres-skill/: README.md
scripts/: apply_sql_migration.sh
skills/: _INDEX.md  skill-prompt-discovery.md  skill-repo-discovery.md
skills/api/: rest-api-design.md
skills/cicd/: github-actions-workflows.md
tests/: test_placeholder.py
tests/tasks/: skills-parity.md  smoke.md
