[project]
name = "codex-experiments"
version = "0.1.0"
description = "GPT-5 Codex skills and agent experiments"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = [
  "tests"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I"
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.uv]
managed = true
